# TicTacToe

./: INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  configure  configure.ac  difficulty.c  level.c  main.c  minimax.c  stats.c  tictactoe.c
include/: difficulty.h  level.h  libttt.h  minimax.h  stats.h
src/: Makefile  Makefile.am  Makefile.in  difficulty.c  difficulty.h  libttt.h  main.c  minimax.c  stats.c  stats.h  tictactoe.c
