CFLAGS = -std=gnu99 -g -O2 -Wall

bin_PROGRAMS = tictactoe
tictactoe_SOURCES =          \
     main.c                  \
     tictactoe.c             \
     libttt.h                \
     minimax.c               \
     minimax.h               \
     difficulty.c            \
     difficulty.h            \
     stats.c                 \
     stats.h
